# Magic_Movement_Recorder

./: CMakeLists.txt
.github/workflows/: build-x64.yml
